Improvements in the handling of crontab comments

Improvements in the handling of crontab comments include appending all commented lines above a cron expression and discarding previous ones if there is an enter.

Works situations
```sh
#- - - * randomtext abc
#5 * * * *       /home/ubuntu/teste.sh


#- - - * randomtext abc
5 * * * *       /home/ubuntu/teste.sh
#- - - * randomtext abc
#5 * * * *       /home/ubuntu/teste.sh
```

```sh
#- - - * randomtext abc
#5 * * * *       /home/ubuntu/teste.sh

#- - - * randomtext abc
5 * * * *       /home/ubuntu/teste.sh
```

```sh
# another comment
#- - - * randomtext abc
5 * * * *       /home/ubuntu/teste.sh
```

Before:
| header | header |
| ------ | ------ |
|  ![sk4](/uploads/c612c20090ad6bf522e16d222f4c3256/sk4.png)      |   ![sk5](/uploads/8a54851d6cc5d0fdc911ec5df157fe97/sk5.png)     |


After
| header | header |
| ------ | ------ |
|  ![sk6](/uploads/790890284229d38e6676d04ec1643dbe/sk6.png)      |   ![sk7](/uploads/b48bb6c8ee32fd96d13445a8dfbff66d/sk7.png)     |



Another example

```sh
#- - - * randomtext abc
#5 * * * *       /home/ubuntu/teste.sh
#- - - * randomtext abc
5 * * * *       /home/ubuntu/teste.sh

#teste abc
#\  * * *       /home/ubuntu/kde/src/kcron/Messages.sh
#testes comentários
10 * * * *       /home/ubuntu/kde/src/kcron/Messages.sh
```
![image](/uploads/452bfdd47170c2d82b0ddf97e775e908/image.png)


BUG: 432679